--- a/src/index.html
+++ b/src/index.html
@@ -5,15 +5,12 @@
     <link rel="stylesheet" href="pages/main/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tauri App</title>
-    <script type="module" src="./pages/main/main.js" defer></script>
-    <script type="module" src="./pages/test/test.js" defer></script>
+    <script type="module" src="pages/main/main.js" defer></script>
 
-    <style>
-    </style>
   </head>
       <div id="root">
         <div id="input_conteneur">
-          <input type="text" name="pseudo" id="pseudo_input">
+          <label for="pseudo_input"></label><input type="text" name="pseudo" id="pseudo_input">
           <button id="connect_button">Connect</button>
         </div>
       </div>
