--- a/src/pages/test/test.html
+++ b/src/pages/test/test.html
@@ -2,13 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8"/>
-    <link rel="stylesheet" href="../main/style.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <script type="module" src="test.js" defer></script>
     <title>Page Test</title>
-    <style>
-    </style>
 </head>
-<p>Ceci est un test</p>
+<p>Bienvenue <p id="pseudo"></p> </p>
 </div>
 <body>
 </body>
