--- a/src/pages/test/test.html
+++ b/src/pages/test/test.html
@@ -6,8 +6,8 @@
     <script type="module" src="test.js" defer></script>
     <title>Page Test</title>
 </head>
-<p>Bienvenue <p id="pseudo"></p> </p>
-</div>
 <body>
+<p id="pseudo">Bienvenue </p>
+
 </body>
 </html>
