--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,8 @@
 <body>
 <div id="root">
     <div id="input_conteneur">
-        <label for="pseudo_input"></label><input type="text" name="pseudo" id="pseudo_input">
+        <input type="text" id="ip" placeholder="IP">
+        <input type="text" name="pseudo" id="pseudo_input" placeholder="PSEUDO">
         <button id="connect_button">Connect</button>
     </div>
 </div>
